# ztx-bot

./: .env.dev  .gitignore  LICENSE  README.md  bot.py  config.json.example  pyproject.toml  requirements.txt
config/: __init__.py
genshin/: __init__.py
genshin/api/: __init__.py  api.py  api_v1.py
genshin/constants/: __init__.py  server_type.py
genshin/models/: __init__.py  index_data.py
src/plugins/divine/: __init__.py
src/plugins/genshin/: __init__.py
src/plugins/get_all_members/: __init__.py
